Fix unread bug (#48)
* fix unread issue

* change btn text

---------
