# Backend/src/user/user.router.ts
@@ -41,6 +41,16 @@ export default class UserRouter {
       );
       response.send(user);
     });
+
+    this.router.put(
+      "/onlinestatus",
+      async (request: Request, response: Response) => {
+        const username: string = request.body.username;
+        const user: ESNUser =
+          await this.userController.updateUserOnlineStatus(username);
+        response.send(user);
+      }
+    );
   }
 
   getRouter(): Router {
